--- a/Java0613/.classpath
+++ b/Java0613/.classpath
@@ -6,7 +6,7 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="D:/Yuan/mysql-connector-j-8.0.33/mysql-connector-j-8.0.33.jar"/>
-	<classpathentry kind="lib" path="D:/Yuan/json-20230618.jar"/>
+	<classpathentry kind="lib" path="C:/Users/aasda/OneDrive/桌面/Eclipse/mysql-connector-j-8.1.0/mysql-connector-j-8.1.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/aasda/OneDrive/桌面/Eclipse/json-20230618.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
